[package]
name = "comae"
version = "0.1.0"
edition = "2021"

[workspace]
members = [".", "migration", "entity"]

[dependencies]
entity = { path = "entity" }
migration = { path = "migration" }

anyhow = "1.0"
dotenv = "0.15"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
poise = "0.5.2"
google-youtube3 = "4.0.1+20220303"

tokio = { version = "1.19", features = ["rt-multi-thread"] }

tracing-subscriber = "0.3"
tracing = "0.1"

chrono = "0.4"
sea-orm = { version = "0.10", features = [
    "sqlx-postgres",
    "runtime-tokio-rustls",
    "macros",
] }

[dependencies.serenity]
version = "0.11"
default-features = false
features = [
    "builder",
    "cache",
    "chrono",
    "client",
    "gateway",
    "http",
    "model",
    "utils",
    "rustls_backend",
]
